<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">
        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cart_list"
            android:background="@color/grey"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bill_layout"
            android:background="@color/white"
            android:layout_below="@+id/cart_list"
            android:padding="8dp">
            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/coupon_layout"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/b_apply"
                app:hintEnabled="true"
                android:textColorHint="@color/grey_text"
                android:layout_marginTop="8dp">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/e_coupon"
                    android:hint="@string/coupon"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/grey_text"
                    android:textSize="14sp"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/b_apply"
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/coupon_layout"
                android:layout_alignParentEnd="true"
                android:text="Apply"
                android:textColor="@color/colorPrimary" />
            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/i_remove"
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/coupon_layout"
                android:layout_alignParentEnd="true"
                app:srcCompat="@drawable/ic_minus"
                android:visibility="invisible"
                android:textColor="@color/colorPrimary" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/t_title"
                android:layout_below="@+id/coupon_layout"
                android:text="@string/bill_details"
                android:textStyle="bold"
                android:textColor="@color/grey_text"
                android:textSize="14sp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/h_total"
                android:layout_below="@+id/t_title"
                android:padding="4dp"
                android:layout_marginStart="4dp"
                android:text="@string/cart_total"
                android:textSize="14sp"
                android:textColor="@color/grey_text"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/t_total"
                android:layout_below="@+id/t_title"
                android:gravity="center_vertical|end"
                android:layout_alignParentEnd="true"
                android:layout_alignTop="@+id/h_total"
                android:layout_alignBottom="@+id/h_total"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/h_discount"
                android:text="@string/discount"
                android:padding="4dp"
                android:layout_marginStart="4dp"
                android:textColor="@color/grey_text"
                android:layout_below="@+id/h_total"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/t_discount"
                android:layout_below="@+id/h_total"
                android:layout_alignParentEnd="true"
                android:gravity="center_vertical|end"
                android:layout_alignTop="@+id/h_discount"
                android:layout_alignBottom="@+id/h_discount"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/h_delivery"
                android:text="@string/delivery_charges"
                android:textColor="@color/grey_text"
                android:padding="4dp"
                android:layout_marginStart="4dp"
                android:layout_below="@+id/t_discount"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/t_delivery"
                android:layout_alignParentEnd="true"
                android:gravity="center_vertical|end"
                android:layout_below="@+id/t_discount"
                android:layout_alignTop="@+id/h_delivery"
                android:layout_alignBottom="@+id/h_delivery"/>
            <View
                android:layout_width="150dp"
                android:layout_height="1dp"
                android:background="@color/grey"
                android:id="@+id/line"
                android:layout_below="@+id/t_delivery"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/t_grand_total"
                android:gravity="center_vertical|end"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/line"
                android:layout_marginTop="8dp"
                android:padding="4dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/h_pay"
                android:text="You Pay"
                android:textStyle="bold"
                android:layout_below="@id/line"
                android:padding="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:layout_toStartOf="@id/line"/>
        </RelativeLayout>
    </RelativeLayout>
</ScrollView>